[FEAT] : Home 화면 구성

--- a/shoppi/app/src/main/res/values/styles.xml
+++ b/shoppi/app/src/main/res/values/styles.xml
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <style name="TextHeadLine5.Black02" parent="TextAppearance.MaterialComponents.Headline5">
+        <item name="android:textColor">@color/shoppi_black_02</item>
+    </style>
+
+    <style name="TextHeadLine5.Black02.Bold">
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="TextMedium" parent="TextAppearance.AppCompat.Medium">
         <item name="android:textColor">@color/shoppi_black_01</item>
     </style>
+
     <style name="TextMedium.Purple">
         <item name="android:textColor">@color/shoppi_purple</item>
     </style>
@@ -14,9 +24,11 @@
     <style name="TextSubtitle1" parent="TextAppearance.MaterialComponents.Subtitle1">
         <item name="android:textColor">@color/shoppi_black_01</item>
     </style>
+
     <style name="TextSubtitle1.White">
         <item name="android:textColor">@color/shoppi_white</item>
     </style>
+
     <style name="TextSubtitle1.White.Bold">
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/shoppi_white</item>
