--- a/shoppi/app/src/main/res/navigation/main_navigation.xml
+++ b/shoppi/app/src/main/res/navigation/main_navigation.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.shoppi_app.HomeFragment"
+        android:name="com.shoppi_app.ui.home.HomeFragment"
         android:label="HomeFragment" >
         <action
             android:id="@+id/action_home_to_product_detail"
@@ -14,14 +14,14 @@
     </fragment>
     <fragment
         android:id="@+id/navigation_category"
-        android:name="com.shoppi_app.CategoryFragment"
+        android:name="com.shoppi_app.ui.CategoryFragment"
         android:label="CategoryFragment" />
     <fragment
         android:id="@+id/navigation_cart"
-        android:name="com.shoppi_app.CartFragment"
+        android:name="com.shoppi_app.ui.CartFragment"
         android:label="CartFragment" />
     <fragment
         android:id="@+id/navigation_product_detail"
-        android:name="com.shoppi_app.ProductDetailFragment"
+        android:name="com.shoppi_app.ui.ProductDetailFragment"
         android:label="ProductDetailFragment" />
 </navigation>
